<resources>
    <string name="app_name">GNSS</string>


    <!--SharedPreference Setting KeyValue-->
    <string name="int_seperate_sign">sperateSign</string>
    <string name="boolfileheader">fileHeader</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="hiding_row_sample">Hiding 3. Row Sample</string>
    <string name="showing_row_sample">Showing 3. Row Sample</string>
    <string name="scroll_to_column_position">Scroll to 15. column position</string>
    <string name="scroll_to_row_position">Scroll to 5. row position</string>
    <string name="show_hide_the_column">Showing / Hiding 1. column</string>
    <string name="table_pagination_details">Page %s, showing items %s - %s.</string>


    <!--SDK DEMO-->
    <string name="msg_initing">Data Loading…</string>
    <string name="msg_please_input_apn_access_pt">Please input the APN</string>
    <string name="msg_please_input_server_num">please Input the server number</string>
    <string name="tv_apn_access_pt">APN</string>
    <string name="tv_server_num">Server Number</string>
    <string name="tv_dial_user_name">Dial userName</string>
    <string name="tv_dial_pswd">Dial Password</string>
    <string name="diff_source_titlt_ip">IP</string>
    <string name="diff_source_titlt_port">Port</string>
    <string name="diff_source_titlt_sourcelist">SourceList</string>
    <string name="diff_source_titlt_user">UserName</string>
    <string name="diff_source_titlt_password">Password</string>
    <string name="msg_logining">3G Loging…</string>


    <string-array name="moods">
        <item />
        <item>Happy</item>
        <item>Sad</item>
    </string-array>

    <string-array name="gender">
        <item />
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="items_per_page">
        <item>10</item>
        <item>20</item>
        <item>25</item>
        <item>50</item>
        <item>All</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>